-Removed support for Container Custom Lifetimes.  Caliburn itself does not use this and it can now easilty be added by developers who wish to.
-Added TestResultEnumerator for easier unit testing of methods that return IEnumerable<IResult>
-Added a dedicated control called NotFoundView which represents views that are not found by an IViewLocator.

V1.1 Release
-Fixed an issue in the WPF version of InteractionNode.
-Fixed an event invocation order issue and a parameter update issue related to routed messages.
-Updated Spring.NET to version 1.3.0.
-Made DefaultWindowManager more friendly to WPF's NavigationWindow.
-Fixed a bug with non-modal window shutdown in DefaultWindowManager.
-Fixed a core bug in custom attribute discovery.
-Enabled routed messages to declare default handlers.  Now ActionMessage declares a default handler for its DataContext.  This solves several Menu routing issues.
-Fixed the apparently completely broken MEF adapter.
-Greatly improved the flexibility of the DefaultViewStrategy.
-Fixed a bug in the WPF DispatcherImpelmentation.
-Fixed a bug in PresenterManager and MultiPresenterManager which caused screen changes to the same screen.
-Enabled view chaching for Silverlight.
-Fixed some bugs in the LOB samples.
-Added Hyperlink/HyerlinkButton element defaults.
-Update StructureMap to version 2.6.1.
-Updated Windsor to version 2.1.1.
-Added official support for .NET 4.0.
-Fixed a bug in MultiPresenterManager for .NET 4.0.
-Updated to MEF Preview 9.
-Applied a patch from Adam Connelly to add AddRange to BindableCollection and IObservableCollection.
-Update Ninject to official 2.0 release.
-Fixed a bug in the Disable IAvailabilityEffect which was preventing it from handling ContentElements in WPF correctly.
-Fixed a bug in the AvailabilityEffectConverter related to resolving custom effects from the container.
-Enabled actions to search for handlers by routing through TemplatedParents in WPF.

V1.1 Release Candidate